# GeoAPP

./: -  .gitignore  API_Extrangero  API_Extrangero.cpp  CMakeCache.txt  CMakeLists.txt  ClienteExtranjero.cpp  ClienteExtranjeroFrancia.cpp  ClienteExtranjeroItalia.cpp  Doxyfile  EnergiaAPI.cpp  EnergiaAPI.hpp  Makefile  PrecioEnergia.cpp  PrecioEnergia.hpp  PruebasAPI  PruebasAPI.cpp  README.md  Servidor.cpp  ServidorAux.cpp  ServidorGPT.cpp  TURBOSTAT.sh  VolatilidadesExtranjero.cpp  VolatilidadesExtranjero.hpp  after_task_report.html  analyze_energy  analyze_energy.cpp  before_task_report.html  client_energy  client_energy.cpp  cliente  clienteAlemania  clienteESpaña  clienteEspaña  clienteFrancia  clienteItalia  cmake_install.cmake  fusionAPI  main.cpp  measure_energy.sh  (+15 more)
client/: client.cpp  clientEspaña.cpp
data/: datosPaises.json
energy_logs/: after_task_powertop_report.html  before_task_powertop_report.html
html/: EnergiaAPI_8cpp.html  EnergiaAPI_8cpp__incl.map  EnergiaAPI_8cpp__incl.md5  EnergiaAPI_8hpp.html  EnergiaAPI_8hpp__dep__incl.map  EnergiaAPI_8hpp__dep__incl.md5  EnergiaAPI_8hpp__incl.map  EnergiaAPI_8hpp__incl.md5  EnergiaAPI_8hpp_source.html  PrecioEnergia_8hpp.html  PrecioEnergia_8hpp__dep__incl.map  PrecioEnergia_8hpp__dep__incl.md5  PrecioEnergia_8hpp__incl.map  PrecioEnergia_8hpp__incl.md5  PrecioEnergia_8hpp_source.html  annotated.html  classEnergiaAPI-members.html  classEnergiaAPI.html  classes.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  graph_legend.html  index.html  (+7 more)
(+44 files in other folders)
